--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #020617; /* slate-950 */
+        background-color: #000000; /* changed from slate-950 to black */
         color: #e5e5e5;
       }
       
